<resources>
    <string name="app_name">TzElife</string>
    <string name="deliver_good">出库订单</string>
    <string name="take_deliver_good">入库订单</string>
    <string name="storage">库存汇总</string>
    <string name="pay_order">付款单</string>
    <string name="take_pay_order">收款单</string>
    <string name="input_phone">请输入手机号</string>
    <string name="input_pwd">请输入密码</string>
    <string name="login_now">立即登录</string>
    <string name="rem_name">记住用户名</string>
    <string name="rem_pwd">记住密码</string>
    <string name="register">注册</string>
    <string name="forget_pwd">忘记密码</string>
    <string name="login_text">登录</string>
    <string name="error_up">用户名或密码错误</string>
</resources>
